[gd_scene load_steps=19 format=3 uid="uid://bx1sg04nq7h04"]

[ext_resource type="Script" path="res://scenes/game/character/single_load_skin.gd" id="1_6cwv1"]
[ext_resource type="Script" path="res://scenes/game/character/single_crock.gd" id="1_qc8l7"]
[ext_resource type="Script" path="res://scenes/game/character/teleporter.gd" id="2_m7gtp"]
[ext_resource type="Texture2D" uid="uid://bok5q7sxwnfus" path="res://assets/sprites/character/head.png" id="4_xl05x"]
[ext_resource type="Script" path="res://scenes/game/modules/single_weapon_collision.gd" id="5_at5yg"]
[ext_resource type="Texture2D" uid="uid://drypq4jdrky7g" path="res://assets/sprites/character/3_p.png" id="5_ql5mf"]
[ext_resource type="Texture2D" uid="uid://die5me60kg1r5" path="res://assets/sprites/character/4_p.png" id="7_p8ka1"]
[ext_resource type="PackedScene" uid="uid://c2khg3vqn4pur" path="res://scenes/game/modules/single_character.tscn" id="8_2kjkb"]
[ext_resource type="Texture2D" uid="uid://cnhkrdor3gjqg" path="res://assets/sprites/character/2_p.png" id="8_vohak"]
[ext_resource type="PackedScene" uid="uid://cfps4j761fr03" path="res://scenes/game/modules/joy_stick.tscn" id="9_lvdov"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2vglq"]
radius = 137.015

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6iprc"]
radius = 60.0
height = 362.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnfxi"]
radius = 60.0
height = 348.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4rvtf"]
radius = 62.0322

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l5wck"]
radius = 60.3683
height = 481.231

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sqaji"]
radius = 60.0333
height = 461.142

[sub_resource type="CircleShape2D" id="CircleShape2D_07ow7"]
radius = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eoyyc"]
radius = 60.0
height = 242.0

[node name="Crock" type="Node2D"]
script = ExtResource("1_qc8l7")

[node name="LocalCharacter" type="Node2D" parent="."]
script = ExtResource("1_6cwv1")

[node name="Head" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable", "Damager"]]
position = Vector2(0, -225)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Head"]
texture = ExtResource("4_xl05x")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="LocalCharacter/Head"]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_2vglq")

[node name="HB" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-54, 105)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB2" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(54, 105)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB3" type="PinJoint2D" parent="LocalCharacter/Head"]
position = Vector2(0, 105)
node_a = NodePath("..")
node_b = NodePath("../../Body")

[node name="HB4" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-54, 105)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB5" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(54, 105)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="Body" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
mass = 0.1
center_of_mass_mode = 1
center_of_mass = Vector2(0, -107)
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Body"]
texture = ExtResource("5_ql5mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Body"]
shape = SubResource("CapsuleShape2D_6iprc")

[node name="RLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(360, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLA"]
texture = ExtResource("5_ql5mf")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(54.0005, 120)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-53.9996, 120)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA3" type="PinJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(0.000427246, 120)
rotation = -1.5708
node_a = NodePath("../../RUA")
node_b = NodePath("..")

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(54.0005, 120)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-53.9996, 120)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLA"]
position = Vector2(2.57492e-05, 7)
shape = SubResource("CapsuleShape2D_rnfxi")

[node name="RF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RF"]
shape = SubResource("CircleShape2D_4rvtf")

[node name="RF" type="PinJoint2D" parent="LocalCharacter/RF"]
node_a = NodePath("../../RLA")
node_b = NodePath("..")
bias = 0.9

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RF"]
script = ExtResource("5_at5yg")

[node name="LUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-120, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUA"]
texture = ExtResource("5_ql5mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUA"]
shape = SubResource("CapsuleShape2D_6iprc")

[node name="BLA" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(53.9996, -120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-54.0004, -120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA3" type="PinJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-0.00043869, -120)
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(53.9996, -120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-54.0004, -120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="RUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(120, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUA"]
texture = ExtResource("5_ql5mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUA"]
shape = SubResource("CapsuleShape2D_6iprc")

[node name="BRA" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(54.0004, 120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-53.9996, 120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA3" type="PinJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(0.00043869, 120)
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(54.0004, 120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-53.9996, 120)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="LLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-360, 0)
rotation = -1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLA"]
texture = ExtResource("5_ql5mf")

[node name="LLA" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(53.9988, 120)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(-54.0012, 120)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA3" type="PinJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(-0.00119019, 120)
rotation = -1.5708
node_a = NodePath("../../LUA")
node_b = NodePath("..")

[node name="LLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(53.9988, 120)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(-54.0012, 120)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLA"]
position = Vector2(2.19345e-05, 7)
shape = SubResource("CapsuleShape2D_rnfxi")

[node name="LF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LF"]
shape = SubResource("CircleShape2D_4rvtf")

[node name="LF" type="PinJoint2D" parent="LocalCharacter/LF"]
node_a = NodePath("../../LLA")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LF"]
script = ExtResource("5_at5yg")

[node name="LUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-90, 516)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUL"]
texture = ExtResource("7_p8ka1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUL"]
shape = SubResource("CapsuleShape2D_l5wck")

[node name="HLL" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-53.3949, -180.482)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HLL2" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(54.1455, -180.217)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HLL3" type="PinJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-0.0577393, -180.1)
rotation = -0.523599
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HLL4" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-53.3949, -180.482)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HLL5" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(54.1455, -180.217)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-270, 828)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLL"]
texture = ExtResource("7_p8ka1")

[node name="LLL" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-54.261, -179.982)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LLL2" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(53.2794, -179.717)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LLL3" type="PinJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-0.0577698, -180.099)
rotation = -0.523599
node_a = NodePath("../../LUL")
node_b = NodePath("..")

[node name="LLL4" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-54.261, -179.982)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LLL5" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(53.2794, -179.717)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLL"]
position = Vector2(-0.16983, -10.2941)
shape = SubResource("CapsuleShape2D_sqaji")

[node name="LK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-360, 984)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LK"]
shape = SubResource("CircleShape2D_07ow7")

[node name="LK" type="PinJoint2D" parent="LocalCharacter/LK"]
node_a = NodePath("../../LLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LK"]

[node name="Hip" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 300)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Hip"]
texture = ExtResource("8_vohak")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(0, -60)
node_a = NodePath("../../Stomach")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Hip"]
shape = SubResource("CapsuleShape2D_eoyyc")

[node name="RLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(270, 828)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLL"]
texture = ExtResource("7_p8ka1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLL"]
position = Vector2(-0.16983, -10.2941)
shape = SubResource("CapsuleShape2D_sqaji")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-52.7795, -180.583)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(53.3949, -180.482)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(0.0577087, -180.099)
rotation = 0.523599
node_a = NodePath("../../RUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-52.7795, -180.583)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(53.3949, -180.482)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(90, 516)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUL"]
texture = ExtResource("7_p8ka1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUL"]
shape = SubResource("CapsuleShape2D_l5wck")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-52.5453, -180.75)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(53.629, -180.65)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(0.291824, -180.267)
rotation = 0.523599
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-52.5453, -180.75)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(53.629, -180.65)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(360, 984)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RK"]
shape = SubResource("CircleShape2D_07ow7")

[node name="RK" type="PinJoint2D" parent="LocalCharacter/RK"]
node_a = NodePath("../../RLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RK"]

[node name="Stomach" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 180)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_m7gtp")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Stomach"]
texture = ExtResource("8_vohak")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, -60)
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(54, -60)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Stomach"]
shape = SubResource("CapsuleShape2D_eoyyc")

[node name="Extra" type="Node2D" parent="."]

[node name="Center" type="Marker2D" parent="Extra"]
position = Vector2(0, 305)

[node name="Reach" type="Marker2D" parent="Extra/Center"]
position = Vector2(750, 0)

[node name="HitCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillDuration" type="Timer" parent="Extra"]
one_shot = true

[node name="DoubleJoyStick" parent="Extra" instance=ExtResource("9_lvdov")]

[node name="InvulnerabilityCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="Character" parent="Extra" instance=ExtResource("8_2kjkb")]
